<resources>
    <string name="app_name">ShowRoom</string>

    --- Onboard ---
    <string name="onboard_connect">Connect to the </string>
    <string name="onboard_future">future</string>

    --- Cadastro Register ---
    <string name="cadastro_tire_foto">Take a\npicture</string>
    <string name="cadastro_nome_completo">Name</string>
    <string name="cadastro_empresa">Company</string>
    <string name="cadastro_phone">Phone</string>
    <string name="cadastro_hintCelular">+00 (00) 000 000 000</string>
    <string name="cadastro_email">E-mail</string>
    <string name="cadastro_botao_registrar">Register</string>
    <string name="cadastro_botao_SignIn">Sign In</string>

    --- Cadastro Login ---
    <string name="login_insira">Enter an email:</string>
    <string name="login_email">E-mail</string>
    <string name="login_logar">Enter</string>
    <string name="cadastro_botao_SignUp">Sign Up</string>

    --- HUB ---
    <string name="hub_total_evercoins">TOTAL EVERCOINS</string>
    <string name="hub_evercoins_cifrao">C$</string>
    <string name="hub_botao_gift">Face Pay\u0020</string>
    <string name="bt_hub_travel_2">Travel</string>
    <string name="bt_hub_building_1">Building</string>
    <string name="bt_hub_building_2">your life</string>
    <string name="bt_hub_personal_1">Personal</string>
    <string name="bt_hub_personal_2">Finances</string>
    <string name="bt_hub_invoice_1">Invoice</string>
    <string name="bt_hub_invoice_2">Guide</string>
    <string name="hub_log_out">Log out \u0020 ✖︎</string>
    <string name="hub_check_symbol">\u2714</string>

    --- End ---
    <string name="end_everis_journey">Your journey is</string>
    <string name="end_completed">complete.</string>
    <string name="end_welcome">Welcome to the next level.</string>
    <string name="end_botao_voltar">Back to Start</string>

</resources>
