<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/everis_background"
    tools:context=".view.EndActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="380dp"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        android:background="@drawable/rounded_top"
        android:backgroundTint="@color/branco"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_end_everis_journey"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/helvetica_neue_thin"
            android:text="@string/end_everis_journey"
            android:textAlignment="center"
            android:textColor="@color/cinza_escuro"
            android:textSize="32sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_end_completed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/helvetica_neue_bold"
            android:text="@string/end_completed"
            android:textAlignment="center"
            android:textColor="@color/cinza_escuro"
            android:textSize="42sp"
            app:layout_constraintEnd_toEndOf="@+id/tv_end_everis_journey"
            app:layout_constraintStart_toStartOf="@+id/tv_end_everis_journey"
            app:layout_constraintTop_toBottomOf="@+id/tv_end_everis_journey" />

        <ImageView
            android:id="@+id/iv_end_everis_logo_original"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_marginTop="32dp"
            android:contentDescription="@null"
            android:src="@drawable/everis_logo_verde"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_end_completed" />

        <TextView
            android:id="@+id/tv_end_welcome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/helvetica_neue_thin"
            android:text="@string/end_welcome"
            android:textAlignment="center"
            android:textColor="@color/cinza_escuro"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_end_everis_logo_original" />

        <Button
            android:id="@+id/bt_end_voltar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="54dp"
            android:background="@drawable/rounded_corner"
            android:backgroundTint="@color/verde_everis"
            android:fontFamily="@font/helvetica_neue_bold"
            android:padding="20dp"
            android:text="@string/end_botao_voltar"
            android:textAllCaps="false"
            android:textColor="@color/branco"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_end_welcome" />

    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>