<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:isScrollContainer="true"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/branco">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/civ_cadastro_foto"
            android:layout_width="114dp"
            android:layout_height="114dp"
            android:layout_marginTop="0dp"
            android:src="@color/branco"
            app:civ_border_color="@color/cinza_escuro"
            app:civ_border_width="0.5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/cl_cadastro_info_botao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@id/civ_cadastro_foto"
            app:layout_constraintStart_toStartOf="@id/civ_cadastro_foto"
            app:layout_constraintTop_toTopOf="@+id/civ_cadastro_foto">

            <ImageView
                android:id="@+id/iv_cadastro_camera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:contentDescription="@null"
                android:src="@drawable/everis_camera"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/helvetica_neue_thin"
                android:text="@string/cadastro_tire_foto"
                android:textAlignment="center"
                android:textColor="@color/cinza_escuro"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_cadastro_camera" />

        </android.support.constraint.ConstraintLayout>

        <TextView
            android:id="@+id/tv_cadastro_nome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/helvetica_neue_thin"
            android:text="@string/cadastro_nome_completo"
            android:textColor="@color/cinza_escuro"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/civ_cadastro_foto" />

        <EditText
            android:id="@+id/et_cadastro_nome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/background_caixa_texto"
            android:ems="10"
            android:fontFamily="@font/helvetica_neue_bold"
            android:gravity="center"
            android:hint="@string/cadastro_nome_completo"
            android:importantForAutofill="no"
            android:inputType="textCapWords"
            android:padding="9dp"
            android:textColor="@color/preto"
            android:textColorHint="@color/cinza_escuro"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_cadastro_nome"
            tools:targetApi="o" />

        <TextView
            android:id="@+id/tv_cadastro_empresa"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="18dp"
            android:fontFamily="@font/helvetica_neue_thin"
            android:text="@string/cadastro_empresa"
            android:textColor="@color/cinza_escuro"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_cadastro_nome" />

        <EditText
            android:id="@+id/et_cadastro_empresa"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/background_caixa_texto"
            android:ems="10"
            android:fontFamily="@font/helvetica_neue_bold"
            android:gravity="center"
            android:hint="@string/cadastro_empresa"
            android:importantForAutofill="no"
            android:inputType="textCapWords"
            android:padding="9dp"
            android:textColor="@color/preto"
            android:textColorHint="@color/cinza_escuro"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_cadastro_empresa"
            tools:targetApi="o" />

        <TextView
            android:id="@+id/tv_cadastro_celular"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="18dp"
            android:fontFamily="@font/helvetica_neue_thin"
            android:text="@string/cadastro_phone"
            android:textColor="@color/cinza_escuro"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_cadastro_empresa" />

        <com.santalu.maskedittext.MaskEditText
            android:id="@+id/et_cadastro_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/background_caixa_texto"
            android:ems="10"
            android:fontFamily="@font/helvetica_neue_bold"
            android:gravity="center"
            android:hint="@string/cadastro_hintCelular"
            app:met_mask="+## (##) ##### - ####"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:padding="9dp"
            android:textColor="@color/preto"
            android:textColorHint="@color/cinza_escuro"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_cadastro_celular"
            tools:targetApi="o" />

        <TextView
            android:id="@+id/tv_cadastro_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="18dp"
            android:fontFamily="@font/helvetica_neue_thin"
            android:text="@string/cadastro_email"
            android:textColor="@color/cinza_escuro"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_cadastro_phone" />

        <EditText
            android:id="@+id/et_cadastro_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/background_caixa_texto"
            android:ems="10"
            android:fontFamily="@font/helvetica_neue_bold"
            android:gravity="center"
            android:hint="@string/cadastro_email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:padding="9dp"
            android:textColor="@color/preto"
            android:textColorHint="@color/cinza_escuro"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_cadastro_email"
            tools:targetApi="o" />

        <ProgressBar
            android:id="@+id/pb_cadastro_progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/verde_everis"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_cadastro_email"
            tools:visibility="visible" />

        <Button
            android:id="@+id/bt_cadastro_register"
            android:layout_width="166dp"
            android:layout_height="40dp"
            android:layout_marginStart="75dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/rounded_corner"
            android:backgroundTint="@color/verde_everis"
            android:fontFamily="@font/helvetica_neue_bold"
            android:text="@string/cadastro_botao_registrar"
            android:textAllCaps="false"
            android:textColor="@color/branco"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_cadastro_email"
            tools:ignore="NotSibling" />

        <Button
            android:id="@+id/bt_cadastro_signUp"
            android:layout_width="63dp"
            android:layout_height="30dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="64dp"
            android:layout_marginLeft="3dp"
            android:background="@color/transparente"
            android:fontFamily="@font/helvetica_neue_bold"
            android:text="@string/cadastro_botao_SignIn"
            android:textAllCaps="false"
            android:textColor="@color/cinza_escuro"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bt_cadastro_register"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="NotSibling" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>
